--- a/deep-learning-with-python-by-francois-chollet/3-introduction-to-keras-and-tensorflow/01_tensorflow_fundametal.ipynb
+++ b/deep-learning-with-python-by-francois-chollet/3-introduction-to-keras-and-tensorflow/01_tensorflow_fundametal.ipynb
@@ -6,7 +6,7 @@
       "name": "01-tensorflow-fundametal.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMpJuQNQMjHzwcwkr57pZj7",
+      "authorship_tag": "ABX9TyN2TebGAQ2wvCeFxIcYPpbJ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -117,7 +117,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "_LUP1jsl64vL",
-        "outputId": "98fd9c10-5c37-4dbe-d4ef-9238e3427152"
+        "outputId": "91bc0c1b-e073-4a20-e173-62545b6942e7"
       },
       "execution_count": 2,
       "outputs": [
@@ -143,7 +143,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "vaDffqv57ALI",
-        "outputId": "3e8be407-e2dc-4b8a-dca1-31eef77bbc2c"
+        "outputId": "bc84c875-2d4b-4b73-ea65-1b7f40cbbe2a"
       },
       "execution_count": 3,
       "outputs": [
@@ -168,7 +168,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "33wMm3X_7I85",
-        "outputId": "c2a22bf4-ae00-41ef-80fc-44edfb0a6649"
+        "outputId": "49a0a40b-e066-473c-d884-59af6d090736"
       },
       "execution_count": 4,
       "outputs": [
@@ -194,7 +194,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "MNK1jUYN7Ojb",
-        "outputId": "2c2e7e5c-b683-4c4f-fb9f-91634592ab0f"
+        "outputId": "15e17485-e81c-47e1-eafc-910e9ccc8d4a"
       },
       "execution_count": 5,
       "outputs": [
@@ -229,7 +229,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "TjeKGDx-7Y28",
-        "outputId": "5060343f-511f-4b8f-f0ad-d714a8e94b8d"
+        "outputId": "0e875987-1692-4a45-d65b-69c853b36253"
       },
       "execution_count": 6,
       "outputs": [
@@ -238,9 +238,9 @@
           "name": "stdout",
           "text": [
             "tf.Tensor(\n",
-            "[[-0.17470434]\n",
-            " [-2.6843026 ]\n",
-            " [-0.04324743]], shape=(3, 1), dtype=float32)\n"
+            "[[-0.65337884]\n",
+            " [-1.0298071 ]\n",
+            " [-1.17121   ]], shape=(3, 1), dtype=float32)\n"
           ]
         }
       ]
@@ -256,7 +256,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "p5jLNjx77yip",
-        "outputId": "6f8f67ee-b991-427f-fdd4-1ad2609b61ee"
+        "outputId": "eaa99d7e-39bf-40da-baef-dd9b38e36acb"
       },
       "execution_count": 7,
       "outputs": [
@@ -264,9 +264,9 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[[-1.45274625]\n",
-            " [-0.35813236]\n",
-            " [ 0.49590577]]\n"
+            "[[-0.34242538]\n",
+            " [-0.84452594]\n",
+            " [ 0.04355254]]\n"
           ]
         }
       ]
@@ -283,7 +283,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "fmbaMt1M8EqA",
-        "outputId": "5d7c3703-d661-4c5b-8e93-8716d061b90f"
+        "outputId": "7f4bf4e8-09b6-4e58-a8a2-113878637d69"
       },
       "execution_count": 8,
       "outputs": [
@@ -292,9 +292,9 @@
           "name": "stdout",
           "text": [
             "tf.Tensor(\n",
-            "[[0.0677222 ]\n",
-            " [0.89348197]\n",
-            " [0.84030616]], shape=(3, 1), dtype=float32)\n"
+            "[[0.15898514]\n",
+            " [0.57103324]\n",
+            " [0.6071217 ]], shape=(3, 1), dtype=float32)\n"
           ]
         }
       ]
@@ -310,7 +310,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "AuRlzqSg9W17",
-        "outputId": "15f3e996-74dc-4594-e846-a59d1a61f2cc"
+        "outputId": "5d826ba1-555e-4bab-d7a9-7dbec58c7c3a"
       },
       "execution_count": 9,
       "outputs": [
@@ -318,9 +318,9 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[[0.92575194]\n",
-            " [0.8329919 ]\n",
-            " [0.90909402]]\n"
+            "[[0.27621971]\n",
+            " [0.21226116]\n",
+            " [0.57525445]]\n"
           ]
         }
       ]
@@ -349,7 +349,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Cq1s36K79tgt",
-        "outputId": "0e61aa72-fa90-4e7f-d7cf-3a043eb83b49"
+        "outputId": "5c95ad67-29cc-4fcb-ae02-c43d01e8d8d2"
       },
       "execution_count": 10,
       "outputs": [
@@ -374,9 +374,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "eftc6wiz938F",
-        "outputId": "d5fc97d4-b66e-483e-b561-2dc3eb9ea0fa"
+        "outputId": "d6a096b6-9c13-46b6-a040-2460fd12ebdd"
       },
-      "execution_count": 12,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -409,9 +409,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "mqH-AJDr-BKD",
-        "outputId": "cf1607bd-00a5-440e-d3ca-0ee19109c45d"
+        "outputId": "39982f13-028a-4868-cc2c-8c2a98bde4fd"
       },
-      "execution_count": 13,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -432,7 +432,7 @@
       "metadata": {
         "id": "QYkoIoSy-Fp1"
       },
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -470,18 +470,18 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "90mYsRWj_dVw",
-        "outputId": "85431dfa-d848-4377-bf4f-1a6fdbe5b677"
+        "outputId": "a0861e87-760e-4e58-a827-80dd21db67e8"
       },
-      "execution_count": 15,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "<tf.Variable 'Variable:0' shape=(3, 1) dtype=float32, numpy=\n",
-            "array([[ 0.48890153],\n",
-            "       [-1.4609447 ],\n",
-            "       [-1.5606052 ]], dtype=float32)>\n"
+            "array([[ 1.7472106 ],\n",
+            "       [ 1.3933295 ],\n",
+            "       [-0.04593423]], dtype=float32)>\n"
           ]
         }
       ]
@@ -505,9 +505,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "WnQe8kX6_zNM",
-        "outputId": "4eb7a8bd-9d8f-4d7a-8ec3-6f96dd459b9c"
+        "outputId": "2136ec52-681e-49d0-9765-31c788f22776"
       },
-      "execution_count": 16,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -520,7 +520,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 16
+          "execution_count": 15
         }
       ]
     },
@@ -543,9 +543,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "w5vPMr7Y__nT",
-        "outputId": "e5e32cf4-2e0f-4594-8c3b-fa581d42ab61"
+        "outputId": "92373b86-b551-4368-b1ce-2cc47265323e"
       },
-      "execution_count": 17,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -558,7 +558,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 17
+          "execution_count": 16
         }
       ]
     },
@@ -572,9 +572,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "-OhBXiKNAGqU",
-        "outputId": "b71b75a1-0ebd-408c-bdf1-b9e523b3e21e"
+        "outputId": "774b307a-8e1e-4ca9-b13f-2ac3d2e827e8"
       },
-      "execution_count": 20,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -587,7 +587,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 20
+          "execution_count": 17
         }
       ]
     },
@@ -610,9 +610,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "-InA-JbUAV2s",
-        "outputId": "1f68a138-a97e-4a38-97b6-c23bc907258f"
+        "outputId": "9bad0123-4805-48c6-fc96-9431a437bf81"
       },
-      "execution_count": 21,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -625,7 +625,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 21
+          "execution_count": 18
         }
       ]
     },
@@ -639,9 +639,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "b7oH--oeAg-e",
-        "outputId": "e3334940-31da-442b-ad4c-31f45427fb28"
+        "outputId": "ff60bcbd-5ea7-4d76-a1c3-5e7a30f2c5b5"
       },
-      "execution_count": 22,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -654,7 +654,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 22
+          "execution_count": 19
         }
       ]
     },
@@ -670,10 +670,348 @@
     {
       "cell_type": "markdown",
       "source": [
-        ""
+        "Just like NumPy, TensorFlow offers a large collection of tensor operations to express\n",
+        "mathematical formulas."
       ],
       "metadata": {
         "id": "hOHINVtyApHT"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a = tf.ones((2, 2))\n",
+        "print(a)"
+      ],
+      "metadata": {
+        "id": "GgA3RZatC45O",
+        "outputId": "4c3a9980-19a0-4f49-b5dd-9d934791f1e4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tf.Tensor(\n",
+            "[[1. 1.]\n",
+            " [1. 1.]], shape=(2, 2), dtype=float32)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "b = tf.square(a)  # Take the square\n",
+        "print(b)"
+      ],
+      "metadata": {
+        "id": "zCkbCy9iC9y-",
+        "outputId": "51280ab3-6173-41ba-b04e-7fef259a0c58",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tf.Tensor(\n",
+            "[[1. 1.]\n",
+            " [1. 1.]], shape=(2, 2), dtype=float32)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "c = tf.sqrt(a)  # Take the square root\n",
+        "print(c)"
+      ],
+      "metadata": {
+        "id": "_Y98kPuWDFes",
+        "outputId": "a4819ff5-0987-4927-da34-cb3f5f3fe066",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tf.Tensor(\n",
+            "[[1. 1.]\n",
+            " [1. 1.]], shape=(2, 2), dtype=float32)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "d = b + c  # Add two tensors (element-wise).\n",
+        "print(d)"
+      ],
+      "metadata": {
+        "id": "xGTY6JrKDLPd",
+        "outputId": "022ac063-7262-472c-ce8b-11c538cfa7b4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tf.Tensor(\n",
+            "[[2. 2.]\n",
+            " [2. 2.]], shape=(2, 2), dtype=float32)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "e = tf.matmul(a, b)  # Take the product of two tensors\n",
+        "print(e)"
+      ],
+      "metadata": {
+        "id": "89MAZbv2DSP0",
+        "outputId": "bab11465-60da-47ff-de46-bec354796f52",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tf.Tensor(\n",
+            "[[2. 2.]\n",
+            " [2. 2.]], shape=(2, 2), dtype=float32)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "e *= d   # Multiply two tensors\n",
+        "print(e)"
+      ],
+      "metadata": {
+        "id": "QV5BptfIDY-P",
+        "outputId": "7ea6577c-8291-42a5-9a67-d3e1bbbe436a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tf.Tensor(\n",
+            "[[4. 4.]\n",
+            " [4. 4.]], shape=(2, 2), dtype=float32)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Importantly, each of the preceding operations gets executed on the fly: at any point,\n",
+        "you can print what the current result is, just like in NumPy. We call this eager execution."
+      ],
+      "metadata": {
+        "id": "lfZ5AuSnDklR"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##A look at the GradientTape API"
+      ],
+      "metadata": {
+        "id": "axY6fvidDlAR"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "So far, TensorFlow seems to look a lot like NumPy. But here’s something NumPy can’t do: retrieve the gradient of any differentiable expression with respect to any of its inputs. \n",
+        "\n",
+        "Just open a GradientTape scope, apply some computation to one or several input tensors, and retrieve the gradient of the result with respect to the inputs."
+      ],
+      "metadata": {
+        "id": "uXAPKvgaDnqj"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "input_var = tf.Variable(initial_value=3.)\n",
+        "\n",
+        "with tf.GradientTape() as tape:\n",
+        "  result = tf.square(input_var)\n",
+        "\n",
+        "gradient = tape.gradient(result, input_var)\n",
+        "print(gradient)"
+      ],
+      "metadata": {
+        "id": "fUgVYcILD2iX",
+        "outputId": "109fa459-e7a6-4dd4-bb23-caea3578abf5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tf.Tensor(6.0, shape=(), dtype=float32)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "This is most commonly used to retrieve the gradients of the loss of a model with\n",
+        "respect to its weights: `gradients = tape.gradient(loss, weights)`.\n",
+        "\n",
+        "So far, you’ve only seen the case where the input tensors in `tape.gradient()` were\n",
+        "TensorFlow variables. \n",
+        "\n",
+        "It’s actually possible for these inputs to be any arbitrary tensor.\n",
+        "However, only trainable variables are tracked by default. With a constant tensor, you’d\n",
+        "have to manually mark it as being tracked by calling `tape.watch()` on it."
+      ],
+      "metadata": {
+        "id": "USYUTBpDEaAd"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "input_const = tf.constant(3.)\n",
+        "\n",
+        "with tf.GradientTape() as tape:\n",
+        "  tape.watch(input_const)\n",
+        "  result = tf.square(input_const)\n",
+        "\n",
+        "gradient = tape.gradient(result, input_const)\n",
+        "print(gradient)"
+      ],
+      "metadata": {
+        "id": "rSLHC15QEnp7",
+        "outputId": "fabb9117-2cf1-4911-d3e2-94363c682b2a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tf.Tensor(6.0, shape=(), dtype=float32)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "To avoid wasting resources, the tape needs to know what to watch. Trainable variables\n",
+        "are watched by default because computing the gradient of a loss with regard to a list of\n",
+        "trainable variables is the most common use of the gradient tape.\n",
+        "\n",
+        "The gradient tape is a powerful utility, even capable of computing second-order gradients,\n",
+        "that is to say, the gradient of a gradient. \n",
+        "\n",
+        "For instance, the gradient of the position\n",
+        "of an object with regard to time is the speed of that object, and the second-order\n",
+        "gradient is its acceleration.\n",
+        "\n",
+        "If you measure the position of a falling apple along a vertical axis over time and\n",
+        "find that it verifies `position(time) = 4.9 * time ** 2`, what is its acceleration? \n",
+        "\n",
+        "Let’s use two nested gradient tapes to find out."
+      ],
+      "metadata": {
+        "id": "xSEorkcvFT3b"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "time = tf.Variable(0.0)\n",
+        "\n",
+        "with tf.GradientTape() as outer_tape:\n",
+        "  with tf.GradientTape() as inner_tape:\n",
+        "    position = 4.9 * time ** 2\n",
+        "  speed = inner_tape.gradient(position, time)\n",
+        "\n",
+        "# We use the outer tape to compute the gradient of the gradient from the inner tape. Naturally, the answer is 4.9 * 2 = 9.8.\n",
+        "acceleration = outer_tape.gradient(speed, time)\n",
+        "print(speed)\n",
+        "print(acceleration)"
+      ],
+      "metadata": {
+        "id": "OKxbrLIzFmPO",
+        "outputId": "b72b7280-e94a-4e88-b16a-3d5e59128f5d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tf.Tensor(0.0, shape=(), dtype=float32)\n",
+            "tf.Tensor(9.8, shape=(), dtype=float32)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##An end-to-end example: A linear classifier in pure TensorFlow"
+      ],
+      "metadata": {
+        "id": "lYPRNpBAGohf"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "KeuiaUwlGqJ4"
       }
     }
   ]
